fix: oidc jwks endpoint only return default cert (#506)
